2006-05-11  Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.AddDataDef): Use Report.Error for consistent error
	reporting.
	* MethodDef.cs (MethodDef.AddLabel): Likewise.

2006-05-11  Ankit Jain  <jankit@novell.com>

	* MethodDef.cs (MethodDef.AddLabel): Fix exception message.

2006-05-09  Ankit Jain  <jankit@novell.com>

	* MethodDef.cs (MethodDef.AddLabel): Throw exception for duplicate
	labels.

2006-05-09 Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.data_list): Change to ..
	(CodeGen.data_table): .. a hashtable.
	(CodeGen.AddDataDef): Update to throw exception for duplicate .data
	labels.
	(CodeGen.GetDataConst): Update to use data_table.

2006-04-24  Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.ctor): Remove 'is_assembly' param.
	(CodeGen.Write): Emit assembly manifest only if the source
	had it.

2006-02-22  Ankit Jain  <jankit@novell.com>

	* ExternTable.cs (ExternTable.GetTypeRef): Emit a warning if mscorlib is
	referenced without a corresponding '.assembly extern' directive. 
	* TypeDef.cs (TypeDef.Define): Valuetype class should be sealed. Emit
	warning if its not, and make it so.

2006-02-20  Ankit Jain  <jankit@novell.com>

	* *.cs: Update all .cs files to use Report.Error instead of directly
	throwing an exception.
	* CodeGen.cs (CodeGen.ctor): Remove 'report' param, and the related
	field & property.

2006-02-19  Ankit Jain  <jankit@novell.com>

	* ExternTable.cs (ExternTable.GetModuleTypeRef): 'module_table' can be
	null.

2006-02-19  Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.Write): Use only filename as the name of the
	module.
	* TypeDef.cs (TypeDef.ResolveAsMethodRef): New.
	(TypeDef.ResolveMethod): Change signature to take ret_type, params
	etc instead of a signature string. Also, if the method does not exist,
	then use ResolveAsMethodRef to return a MethodRef for it.
	(TypeDef.ResolveVarargMethod): Likewise.
	(TypeDef.ResolveField): Likewise.