@@ -128,6 +128,14 @@ namespace Mono.ILASM {
                         get { return (meth_attr & PEAPI.MethAttr.Abstract) != 0; }
                 }
 
+                public DeclSecurity DeclSecurity {
+                        get {
+                                if (decl_sec == null)
+                                        decl_sec = new DeclSecurity ();
+                                return decl_sec;
+                        }
+                }
+
                 public BaseTypeRef[] ParamTypeList () {
 
                         if (param_list == null)
@@ -190,22 +198,6 @@ namespace Mono.ILASM {
                                 customattr_list = new ArrayList ();
 
                         customattr_list.Add (customattr);
-                }
-
-                public void AddPermissionSet (PEAPI.SecurityAction sec_action, PermissionSet ps)
-                {
-                        if (decl_sec == null)
-                                decl_sec = new DeclSecurity ();
-                        
-                        decl_sec.AddPermissionSet (sec_action, ps);
-                }
-                
-                public void AddPermission (PEAPI.SecurityAction sec_action, IPermission iper)
-                {
-                        if (decl_sec == null)
-                                decl_sec = new DeclSecurity ();
-                        
-                        decl_sec.AddPermission (sec_action, iper);
                 }
 
                 public void AddRetTypeMarshalInfo (PEAPI.NativeType native_type)
