@@ -1,3 +1,12 @@
+2006-05-23  Ankit Jain  <jankit@novell.com>
+
+	* DeclSecurity.cs (IDeclSecurityTarget): Remove AddPermission &
+	AddPermissionSet methods. Add 'DeclSecurity' property.
+	* TypeDef.cs: Update implementation of IDeclSecurityTarget interface.
+	* MethodDef.cs: Likewise.
+	* ExternTable.cs: Likewise.
+	* CodeGen.cs (CodeGen.AddPermission): Use IDeclSecurityTarget.DeclSecurity .
+
 2006-05-11  Ankit Jain  <jankit@novell.com>
 
 	* CodeGen.cs (CodeGen.AddDataDef): Use Report.Error for consistent error
